--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "materio-mui-nextjs-admin-template",
+  "name": "challenge",
   "version": "4.1.0",
   "license": "Commercial",
   "private": true,
