--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,7 +43,8 @@
     "react-toastify": "10.0.5",
     "react-use": "17.5.1",
     "redux-persist": "^6.0.0",
-    "server-only": "0.0.1"
+    "server-only": "0.0.1",
+     "socket.io-client": "^4.8.0"
   },
   "devDependencies": {
     "@iconify/json": "2.2.230",
