--- a/frontend/.env
+++ b/frontend/.env
@@ -5,7 +5,8 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXT_PUBLIC_HOST=localhost
 NEXT_PUBLIC_PORT=3000
 BASEPATH=
-NEXT_PUBLIC_SERVER_API=https://apiprojects.demosroutek.online/
+NEXT_PUBLIC_SERVER_API=http://localhost:4000
+# NEXT_PUBLIC_SERVER_API=https://apiprojects.demosroutek.online/
 NEXT_PUBLIC_ORIGIN_SPACE=clear
 NEXT_CPU_PROF=1
 NEXT_TURBOPACK_TRACING=1
